--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Advent Calendar Hunt</title>
+  <title>Advent Calendar Hunt 🎄</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <canvas id="snowCanvas"></canvas>
+  
   <h1>🎄 Advent Calendar Hunt 🎁</h1>
   <div id="calendar" class="calendar"></div>
 
@@ -25,6 +27,17 @@
     <h2>🎉 Congratulations! 🎉</h2>
     <p>You found all the letters! The secret message is:</p>
     <h3 id="secretMessage"></h3>
+    <button id="finalDoor">🔒 Open the Final Door</button>
+  </div>
+
+  <div id="passwordModal" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <h2>Enter the final password:</h2>
+      <input type="password" id="passwordInput" placeholder="Your secret password..." />
+      <button id="submitPassword">Unlock</button>
+      <p id="passwordFeedback"></p>
+    </div>
   </div>
 
   <script src="data.js"></script>
