--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   
   <h1>🎄 Advent Calendar Hunt 🎁</h1>
   <div id="calendar" class="calendar"></div>
+  <button id="resetProgress">🔁 Reset Progress</button>
 
   <div id="triviaModal" class="modal">
     <div class="modal-content">
