--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
     <h3>Your Collected Letters:</h3>
     <div id="lettersFound">(none yet)</div>
   </div>
+  <div id="cipherSection">
+  <h3>Secret Message</h3>
+  <p id="cipherText"></p>
+  <p id="decodedText" class="hidden"></p>
+</div>
+
 
   <button id="resetProgress">🔁 Reset Progress</button>
 
