--- a/index.html
+++ b/index.html
@@ -1,50 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>🎄 Advent Calendar Hunt 🎁</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Advent Calendar Mystery</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <canvas id="snowCanvas"></canvas>
+  <div class="snow"></div>
+  <h1>🎄 Advent Calendar Mystery 🎁</h1>
 
-  <h1>🎄 Advent Calendar Scavenger Hunt 🎁</h1>
-  <p>Each day unlocks a new box. Explore, answer trivia, find letters, and decode the final message!</p>
+  <div id="calendar"></div>
 
-  <div id="calendar" class="calendar"></div>
+  <div id="hints">
+    <p><em>Hint:</em> Look closer on Dec 12…</p>
+    <p><em>Hint:</em> Sometimes, numbers hide letters.</p>
+  </div>
 
   <div id="progress">
-    <h3>Your Collected Letters:</h3>
-    <div id="lettersFound">(none yet)</div>
+    <h3>Collected Letters</h3>
+    <p id="lettersFound">(none yet)</p>
   </div>
+
   <div id="cipherSection">
-  <h3>Secret Message</h3>
-  <p id="cipherText"></p>
-  <p id="decodedText" class="hidden"></p>
-</div>
+    <h3>Secret Message</h3>
+    <p id="cipherText"></p>
+    <p id="decodedText" class="hidden"></p>
+  </div>
 
+  <button id="resetBtn">Reset Progress</button>
 
-  <button id="resetProgress">🔁 Reset Progress</button>
-
-  <!-- Trivia modal -->
-  <div id="triviaModal" class="modal">
+  <!-- Trivia Popup -->
+  <div id="triviaModal" class="modal hidden">
     <div class="modal-content">
-      <span class="close">&times;</span>
-      <h2 id="triviaTitle"></h2>
-      <p id="triviaQuestion"></p>
-      <input type="text" id="answerInput" placeholder="Type your answer..." />
+      <span id="closeModal">&times;</span>
+      <h2 id="triviaQuestion"></h2>
+      <input type="text" id="triviaAnswer" placeholder="Type your answer...">
       <button id="submitAnswer">Submit</button>
-      <p id="feedback"></p>
+      <p id="triviaFeedback"></p>
     </div>
   </div>
 
-  <!-- Hidden “easter eggs” -->
-  <div class="hidden-message" style="top:10%; left:5%;">🌟 Psst... the stars hold secrets.</div>
-  <div class="hidden-message" style="bottom:15%; right:10%;">✨ Sometimes, numbers hide letters...</div>
-  <div class="hidden-message" style="bottom:5%; left:40%;">❄️ Look closer on Day 12.</div>
-
-  <script src="data.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
