--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
 
     <section id="cipherSection" class="cipher-panel">
       <h3>Secret Message (cipher)</h3>
-      <p id="cipherText" class="cipher-text"></p>
+      <p id="cipherText" class="cipher-text" style="cursor:pointer;" title="Click to decode!"></p>
       <p id="decodedText" class="decoded hidden"></p>
     </section>
+
 
     <div class="controls">
       <button id="resetBtn" class="btn-reset">🔁 Reset Progress</button>
